package Outlier;

public class DistantClass {
	public void MethodX() {}
}
