package Outlier;

public class FriendlyClass {
	public void Method01() {}
	public int Method02() { return 5; }
	public void Method03() {
		DistantClass c = new DistantClass();
		c.MethodX();
	}
}
