package Services;

public class LogService {

	public static void Log(String message)
	{
		System.out.println(message);
	}
}
