package Services;

public class Services {
	public UserService UserService;
	
	public Services()
	{
		UserService = new UserService();
	}
}
